@@ -1,3 +1,7 @@
+v.120814
+- Can now also merge "alignments" of one sequence
+
+
 v.120717
 - All input data now converted to upper-case.
 
